--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@trpc/client": "^11.4.3",
     "@trpc/server": "^11.4.3",
     "@trpc/tanstack-react-query": "^11.4.3",
+    "@types/prismjs": "^1.26.5",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
@@ -54,6 +55,7 @@
     "lucide-react": "^0.534.0",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
+    "prismjs": "^1.30.0",
     "random-word-slugs": "^0.1.7",
     "react": "^19.0.0",
     "react-day-picker": "^9.8.1",
